--- a/app/src/main/res/layout/activity_covid_update.xml
+++ b/app/src/main/res/layout/activity_covid_update.xml
@@ -7,12 +7,144 @@
     tools:context=".CovUpdate.CovidUpdateActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="covid Update"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="42dp"
+        android:text="Covid Update"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="231dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="27dp"
+        android:background="@color/purple_1000"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="154dp"
+            android:layout_height="36dp"
+            android:background="@color/white"
+            android:text="Positif"
+            android:textColor="@color/purple_1000" />
+
+        <TextView
+            android:id="@+id/tvPositive"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            tools:text="TextView"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="216dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="346dp"
+        android:background="@color/Green"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="154dp"
+            android:layout_height="36dp"
+            android:background="@color/white"
+            android:text="Sembuh"
+            android:textColor="#2E7D32" />
+
+        <TextView
+            android:id="@+id/tvRecover"
+            android:layout_width="206dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            tools:text="TextView"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="216dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/yellow"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.44">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="154dp"
+            android:layout_height="36dp"
+            android:background="@color/white"
+            android:text="Dirawat"
+            android:textColor="#2E7D32" />
+
+        <TextView
+            android:id="@+id/tvHospitalized"
+            android:layout_width="206dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            tools:text="TextView"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="216dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/red"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.732">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="154dp"
+            android:layout_height="36dp"
+            android:background="@color/white"
+            android:text="Meninggal"
+            android:textColor="#2E7D32" />
+        <TextView
+            android:id="@+id/tvDeath"
+            android:layout_width="206dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            tools:text="TextView"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
