--- a/app/src/main/res/layout/activity_non_covid_detail_hospital.xml
+++ b/app/src/main/res/layout/activity_non_covid_detail_hospital.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECFCFF"
-    tools:context=".HospitalPage.HospitalList.DetailHospital.Covid.CovidDetailHospitalActivity">
-
+    tools:context=".HospitalPage.HospitalList.DetailHospital.NonCovid.NonCovidDetailHospitalActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/CovidToolbar"
         android:layout_width="match_parent"
