--- a/app/src/main/res/layout/activity_covid_update.xml
+++ b/app/src/main/res/layout/activity_covid_update.xml
@@ -20,14 +20,13 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="231dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginStart="56dp"
+        android:layout_marginTop="27dp"
         android:layout_marginEnd="56dp"
-        android:layout_marginBottom="27dp"
         android:background="@color/purple_1000"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -46,22 +45,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            tools:text="TextView"
             android:gravity="center"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="TextView" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="216dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="346dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="56dp"
         android:background="@color/Green"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
@@ -78,23 +78,24 @@
             android:layout_height="46dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            tools:text="TextView"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="TextView" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="216dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="56dp"
         android:background="@color/yellow"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.44">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <TextView
             android:id="@+id/textView4"
@@ -110,22 +111,23 @@
             android:layout_height="46dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            tools:text="TextView"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="TextView" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="216dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="56dp"
         android:background="@color/red"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.732">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <TextView
             android:id="@+id/textView5"
@@ -134,15 +136,16 @@
             android:background="@color/white"
             android:text="Meninggal"
             android:textColor="#2E7D32" />
+
         <TextView
             android:id="@+id/tvDeath"
             android:layout_width="206dp"
             android:layout_height="46dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            tools:text="TextView"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="TextView" />
 
     </LinearLayout>
 
